# EnterBoxPlugin_test

./: .gitignore  CMakeLists-qt5.txt  CMakeLists.txt  Doxyfile  README  README.md
forms/: EnterBox.ui
src/: main.cpp
